# hft-strategy-simulator

./: .gitignore  CMakeLists.txt  README.md
bindings/: pybind.bindings.cpp  pybind.module.cpp
include/: MarketEngine.h  Metrics.h  OrderBook.h  SimulationEngine.h  Strategy.h  TradeLog.h
python/: plots.ipynb  run_experiment.py  strategies.py
src/: MarketEngine.cpp  Metrics.cpp  OrderBook.cpp  SimulationEngine.cpp
tests/: test_latency.cpp  test_strategy.cpp
